// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignUpForm client errors validation should show all client validation errors after Sign Up is clicked when fields are empty 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnxRM kkkYfH"
  >
    Sign up to Coins.ph!
    <form
      class="sc-hKFxyN dbVKjX"
    >
      <div
        class="sc-eCApnc jfLywk"
      >
        <label
          class="sc-gKAaRy dRnUqQ"
        >
          Email
          <input
            class="sc-jSFjdj jRHxsF"
            name="email"
            placeholder="Email"
            required=""
            type="email"
            value=""
          />
          <div
            class="sc-gtsrHT cFYBYZ"
          >
            Provide a correct email address
          </div>
        </label>
      </div>
      <div
        class="sc-eCApnc jfLywk"
      >
        <label
          class="sc-gKAaRy dRnUqQ"
        >
          Choose username
          <input
            class="sc-jSFjdj jRHxsF"
            name="username"
            placeholder="Choose username"
            required=""
            type="text"
            value=""
          />
          <div
            class="sc-gtsrHT cFYBYZ"
          >
            Provide a user name
          </div>
        </label>
      </div>
      <div
        class="sc-eCApnc jfLywk"
      >
        <label
          class="sc-gKAaRy dRnUqQ"
        >
          Password
          <input
            class="sc-jSFjdj jRHxsF"
            name="password"
            placeholder="Password"
            required=""
            type="password"
            value=""
          />
          <div
            class="sc-gtsrHT cFYBYZ"
          >
            Password must have at least 8 characters
          </div>
        </label>
      </div>
      <div
        class="sc-eCApnc jfLywk"
      >
        <label
          class="sc-gKAaRy gyBMbf"
        >
          Repeat your password
          <input
            class="sc-jSFjdj jFRYfU"
            name="passwordConfirm"
            placeholder="Repeat your password"
            required=""
            type="password"
            value=""
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-dlnjwi kAkWwW"
      >
        Sign up
        <div
          class="sc-gtsrHT dElqeF"
        />
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SignUpForm client errors validation should show error if incorrect email was set 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnxRM kkkYfH"
  >
    Sign up to Coins.ph!
    <form
      class="sc-hKFxyN dbVKjX"
    >
      <div
        class="sc-eCApnc jfLywk"
      >
        <label
          class="sc-gKAaRy dRnUqQ"
        >
          Email
          <input
            class="sc-jSFjdj jRHxsF"
            name="email"
            placeholder="Email"
            required=""
            type="email"
            value="pavel.a.poltavets"
          />
          <div
            class="sc-gtsrHT cFYBYZ"
          >
            Provide a correct email address
          </div>
        </label>
      </div>
      <div
        class="sc-eCApnc jfLywk"
      >
        <label
          class="sc-gKAaRy gyBMbf"
        >
          Choose username
          <input
            class="sc-jSFjdj jFRYfU"
            name="username"
            placeholder="Choose username"
            required=""
            type="text"
            value="pavel poltavets"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-eCApnc jfLywk"
      >
        <label
          class="sc-gKAaRy gyBMbf"
        >
          Password
          <input
            class="sc-jSFjdj jFRYfU"
            name="password"
            placeholder="Password"
            required=""
            type="password"
            value="12345678"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-eCApnc jfLywk"
      >
        <label
          class="sc-gKAaRy gyBMbf"
        >
          Repeat your password
          <input
            class="sc-jSFjdj jFRYfU"
            name="passwordConfirm"
            placeholder="Repeat your password"
            required=""
            type="password"
            value="12345678"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-dlnjwi kAkWwW"
      >
        Sign up
        <div
          class="sc-gtsrHT dElqeF"
        />
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SignUpForm client errors validation should show error if incorrect password confirmation was set 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnxRM kkkYfH"
  >
    Sign up to Coins.ph!
    <form
      class="sc-hKFxyN dbVKjX"
    >
      <div
        class="sc-eCApnc jfLywk"
      >
        <label
          class="sc-gKAaRy gyBMbf"
        >
          Email
          <input
            class="sc-jSFjdj jFRYfU"
            name="email"
            placeholder="Email"
            required=""
            type="email"
            value="pavel.a.poltavets@gmail.com"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-eCApnc jfLywk"
      >
        <label
          class="sc-gKAaRy gyBMbf"
        >
          Choose username
          <input
            class="sc-jSFjdj jFRYfU"
            name="username"
            placeholder="Choose username"
            required=""
            type="text"
            value="pavel poltavets"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-eCApnc jfLywk"
      >
        <label
          class="sc-gKAaRy gyBMbf"
        >
          Password
          <input
            class="sc-jSFjdj jFRYfU"
            name="password"
            placeholder="Password"
            required=""
            type="password"
            value="12345678"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-eCApnc jfLywk"
      >
        <label
          class="sc-gKAaRy dRnUqQ"
        >
          Repeat your password
          <input
            class="sc-jSFjdj jRHxsF"
            name="passwordConfirm"
            placeholder="Repeat your password"
            required=""
            type="password"
            value="11111111"
          />
          <div
            class="sc-gtsrHT cFYBYZ"
          >
            Password confirmation doesn't match
          </div>
        </label>
      </div>
      <div
        class="sc-dlnjwi kAkWwW"
      >
        Sign up
        <div
          class="sc-gtsrHT dElqeF"
        />
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SignUpForm client errors validation should show error if incorrect password length was set 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnxRM kkkYfH"
  >
    Sign up to Coins.ph!
    <form
      class="sc-hKFxyN dbVKjX"
    >
      <div
        class="sc-eCApnc jfLywk"
      >
        <label
          class="sc-gKAaRy gyBMbf"
        >
          Email
          <input
            class="sc-jSFjdj jFRYfU"
            name="email"
            placeholder="Email"
            required=""
            type="email"
            value="pavel.a.poltavets@gmail.com"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-eCApnc jfLywk"
      >
        <label
          class="sc-gKAaRy gyBMbf"
        >
          Choose username
          <input
            class="sc-jSFjdj jFRYfU"
            name="username"
            placeholder="Choose username"
            required=""
            type="text"
            value="pavel poltavets"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-eCApnc jfLywk"
      >
        <label
          class="sc-gKAaRy dRnUqQ"
        >
          Password
          <input
            class="sc-jSFjdj jRHxsF"
            name="password"
            placeholder="Password"
            required=""
            type="password"
            value="1234567"
          />
          <div
            class="sc-gtsrHT cFYBYZ"
          >
            Password must have at least 8 characters
          </div>
        </label>
      </div>
      <div
        class="sc-eCApnc jfLywk"
      >
        <label
          class="sc-gKAaRy gyBMbf"
        >
          Repeat your password
          <input
            class="sc-jSFjdj jFRYfU"
            name="passwordConfirm"
            placeholder="Repeat your password"
            required=""
            type="password"
            value="1234567"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-dlnjwi kAkWwW"
      >
        Sign up
        <div
          class="sc-gtsrHT dElqeF"
        />
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SignUpForm rendering should render empty form 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnxRM kkkYfH"
  >
    Sign up to Coins.ph!
    <form
      class="sc-hKFxyN dbVKjX"
    >
      <div
        class="sc-eCApnc jfLywk"
      >
        <label
          class="sc-gKAaRy gyBMbf"
        >
          Email
          <input
            class="sc-jSFjdj jFRYfU"
            name="email"
            placeholder="Email"
            required=""
            type="email"
            value=""
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-eCApnc jfLywk"
      >
        <label
          class="sc-gKAaRy gyBMbf"
        >
          Choose username
          <input
            class="sc-jSFjdj jFRYfU"
            name="username"
            placeholder="Choose username"
            required=""
            type="text"
            value=""
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-eCApnc jfLywk"
      >
        <label
          class="sc-gKAaRy gyBMbf"
        >
          Password
          <input
            class="sc-jSFjdj jFRYfU"
            name="password"
            placeholder="Password"
            required=""
            type="password"
            value=""
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-eCApnc jfLywk"
      >
        <label
          class="sc-gKAaRy gyBMbf"
        >
          Repeat your password
          <input
            class="sc-jSFjdj jFRYfU"
            name="passwordConfirm"
            placeholder="Repeat your password"
            required=""
            type="password"
            value=""
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-dlnjwi kAkWwW"
      >
        Sign up
        <div
          class="sc-gtsrHT dElqeF"
        />
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SignUpForm rendering should render filled form 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnxRM kkkYfH"
  >
    Sign up to Coins.ph!
    <form
      class="sc-hKFxyN dbVKjX"
    >
      <div
        class="sc-eCApnc jfLywk"
      >
        <label
          class="sc-gKAaRy gyBMbf"
        >
          Email
          <input
            class="sc-jSFjdj jFRYfU"
            name="email"
            placeholder="Email"
            required=""
            type="email"
            value="pavel.a.poltavets@gmail.com"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-eCApnc jfLywk"
      >
        <label
          class="sc-gKAaRy gyBMbf"
        >
          Choose username
          <input
            class="sc-jSFjdj jFRYfU"
            name="username"
            placeholder="Choose username"
            required=""
            type="text"
            value="pavel poltavets"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-eCApnc jfLywk"
      >
        <label
          class="sc-gKAaRy gyBMbf"
        >
          Password
          <input
            class="sc-jSFjdj jFRYfU"
            name="password"
            placeholder="Password"
            required=""
            type="password"
            value="12345678"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-eCApnc jfLywk"
      >
        <label
          class="sc-gKAaRy gyBMbf"
        >
          Repeat your password
          <input
            class="sc-jSFjdj jFRYfU"
            name="passwordConfirm"
            placeholder="Repeat your password"
            required=""
            type="password"
            value="12345678"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-dlnjwi kAkWwW"
      >
        Sign up
        <div
          class="sc-gtsrHT dElqeF"
        />
      </div>
    </form>
  </div>
</DocumentFragment>
`;
